implemented user search feature
